			     BZFlag Release Notes
			     ====================

BZFlag 2.1.x
------------

* Fixed cross-platform and 64-bit network protocol bug - Andrew McNabb
* Added a NSIS script for Dev-C++ builds - UL_Approved
* Researched and updated BZFlag contributors documentation - Sean Morrison
* Message sounds consistently don't play when from self - Sean Morrison
* Input fixes and improvements (see ChangeLog) - Daniel Remenak, Workaphobia
* Flag hiding work even when Identity flag is on - Alfredo Tupone
* Flag grabbing & identifying made server side - Alfredo Tupone
* Jitter Kick - Thomas Stauer
* Automatic prompting, download and installation of updates - Daniel Remenak
* Append screenshots after the highest numbered existing one - Ian Agar
* Add /modcount to adjust countdown time from within game - Ian Agar
* Fix wrong kick if pausing having V and moving - Julio Jimenez
* Prevent bzfs denial-of-service infinite loop - Sean Morrison
* Minimize attempts to crash servers with malformed messages - Sean Morrison
* Do not inform hunters of stealthy prey - Ian Agar
* Bots share connection with main player - Alfredo Tupone
* Player List command works at least to show his own status - Thomas Stauer
* Bug fixed on countdown virtual capture - Alfredo Tupone
* Removing applauds when capturing its own flag - Alfredo Tupone
* End shot is sent by server on behalf of player - Alfredo Tupone
* GM update is checked for being applicable - Alfredo Tupone
* Shot attribute added from server / receiver - Alfredo Tupone
* Handicap computed server side - Alfredo Tupone
* Shot message are synchronized with position - Alfredo Tupone
* Fixes for Bot on public server - Alfredo Tupone
* All scores are controlled completely by the server - Daniel Remenak
* bzadmin require less network bandwidth - Alfredo Tupone
* Inertia setting are bzdb vars now - Alfredo Tupone

BZFlag 2.0.8 "Oops, Happy Mother's Day" (2006-05-13)
----------------------------------------------------
